# lvgl_mvc

./: CMakeLists.txt  lv_conf.h  main.cpp
