cmake_minimum_required(VERSION 3.16)
project(LvglHello LANGUAGES C CXX)

set(SRC_LIST_LVGL
	lvgl/src/core/lv_disp.c
	lvgl/src/core/lv_event.c
	lvgl/src/core/lv_group.c
	lvgl/src/core/lv_indev.c
	lvgl/src/core/lv_indev_scroll.c
	lvgl/src/core/lv_obj.c
	lvgl/src/core/lv_obj_class.c
	lvgl/src/core/lv_obj_draw.c
	lvgl/src/core/lv_obj_pos.c
	lvgl/src/core/lv_obj_scroll.c
	lvgl/src/core/lv_obj_style.c
	lvgl/src/core/lv_obj_style_gen.c
	lvgl/src/core/lv_obj_tree.c
	lvgl/src/core/lv_refr.c
	lvgl/src/core/lv_theme.c
	lvgl/src/draw/arm2d/lv_gpu_arm2d.c
	lvgl/src/draw/gd32_ipa/lv_gpu_gd32_ipa.c
	lvgl/src/draw/nxp/pxp/lv_draw_pxp_blend.c
	lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp.c
	lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp_osa.c
	lvgl/src/draw/nxp/vglite/lv_draw_vglite_arc.c
	lvgl/src/draw/nxp/vglite/lv_draw_vglite_blend.c
	lvgl/src/draw/nxp/vglite/lv_draw_vglite_rect.c
	lvgl/src/draw/nxp/vglite/lv_gpu_nxp_vglite.c
	lvgl/src/draw/nxp/lv_gpu_nxp.c	
	lvgl/src/draw/sdl/lv_draw_sdl.c
	lvgl/src/draw/sdl/lv_draw_sdl_arc.c
	lvgl/src/draw/sdl/lv_draw_sdl_bg.c
	lvgl/src/draw/sdl/lv_draw_sdl_composite.c
	lvgl/src/draw/sdl/lv_draw_sdl_img.c
	lvgl/src/draw/sdl/lv_draw_sdl_label.c
	lvgl/src/draw/sdl/lv_draw_sdl_layer.c
	lvgl/src/draw/sdl/lv_draw_sdl_line.c
	lvgl/src/draw/sdl/lv_draw_sdl_mask.c
	lvgl/src/draw/sdl/lv_draw_sdl_polygon.c
	lvgl/src/draw/sdl/lv_draw_sdl_rect.c
	lvgl/src/draw/sdl/lv_draw_sdl_stack_blur.c
	lvgl/src/draw/sdl/lv_draw_sdl_texture_cache.c
	lvgl/src/draw/sdl/lv_draw_sdl_utils.c
	lvgl/src/draw/stm32_dma2d/lv_gpu_stm32_dma2d.c
	lvgl/src/draw/sw/lv_draw_sw.c
	lvgl/src/draw/sw/lv_draw_sw_arc.c
	lvgl/src/draw/sw/lv_draw_sw_blend.c
	lvgl/src/draw/sw/lv_draw_sw_dither.c
	lvgl/src/draw/sw/lv_draw_sw_gradient.c
	lvgl/src/draw/sw/lv_draw_sw_img.c
	lvgl/src/draw/sw/lv_draw_sw_layer.c
	lvgl/src/draw/sw/lv_draw_sw_letter.c
	lvgl/src/draw/sw/lv_draw_sw_line.c
	lvgl/src/draw/sw/lv_draw_sw_polygon.c
	lvgl/src/draw/sw/lv_draw_sw_rect.c
	lvgl/src/draw/sw/lv_draw_sw_transform.c
	lvgl/src/draw/swm341_dma2d/lv_gpu_swm341_dma2d.c
	lvgl/src/draw/lv_draw.c
	lvgl/src/draw/lv_draw_arc.c
	lvgl/src/draw/lv_draw_img.c
	lvgl/src/draw/lv_draw_label.c
	lvgl/src/draw/lv_draw_layer.c
	lvgl/src/draw/lv_draw_line.c
	lvgl/src/draw/lv_draw_mask.c
	lvgl/src/draw/lv_draw_rect.c
	lvgl/src/draw/lv_draw_transform.c
	lvgl/src/draw/lv_draw_triangle.c
	lvgl/src/draw/lv_img_buf.c
	lvgl/src/draw/lv_img_cache.c
	lvgl/src/draw/lv_img_cache_builtin.c
	lvgl/src/draw/lv_img_decoder.c
	lvgl/src/font/lv_font.c
	lvgl/src/font/lv_font_dejavu_16_persian_hebrew.c
	lvgl/src/font/lv_font_fmt_txt.c
	lvgl/src/font/lv_font_loader.c
	lvgl/src/font/lv_font_montserrat_8.c
	lvgl/src/font/lv_font_montserrat_10.c
	lvgl/src/font/lv_font_montserrat_12.c
	lvgl/src/font/lv_font_montserrat_12_subpx.c
	lvgl/src/font/lv_font_montserrat_14.c
	lvgl/src/font/lv_font_montserrat_16.c
	lvgl/src/font/lv_font_montserrat_18.c
	lvgl/src/font/lv_font_montserrat_20.c
	lvgl/src/font/lv_font_montserrat_22.c
	lvgl/src/font/lv_font_montserrat_24.c
	lvgl/src/font/lv_font_montserrat_26.c
	lvgl/src/font/lv_font_montserrat_28.c
	lvgl/src/font/lv_font_montserrat_28_compressed.c
	lvgl/src/font/lv_font_montserrat_30.c
	lvgl/src/font/lv_font_montserrat_32.c
	lvgl/src/font/lv_font_montserrat_34.c
	lvgl/src/font/lv_font_montserrat_36.c
	lvgl/src/font/lv_font_montserrat_38.c
	lvgl/src/font/lv_font_montserrat_40.c
	lvgl/src/font/lv_font_montserrat_42.c
	lvgl/src/font/lv_font_montserrat_44.c
	lvgl/src/font/lv_font_montserrat_46.c
	lvgl/src/font/lv_font_montserrat_48.c
	lvgl/src/font/lv_font_simsun_16_cjk.c
	lvgl/src/font/lv_font_unscii_8.c
	lvgl/src/font/lv_font_unscii_16.c
	lvgl/src/hal/lv_hal_disp.c
	lvgl/src/hal/lv_hal_indev.c
	lvgl/src/hal/lv_hal_tick.c
	lvgl/src/layouts/flex/lv_flex.c
	lvgl/src/layouts/grid/lv_grid.c
	lvgl/src/libs/barcode/code128.c
	lvgl/src/libs/barcode/lv_barcode.c
	lvgl/src/libs/bmp/lv_bmp.c
	lvgl/src/libs/ffmpeg/lv_ffmpeg.c
	lvgl/src/libs/freetype/lv_freetype.c
	lvgl/src/libs/freetype/lv_ftsystem.c
	lvgl/src/libs/fsdrv/lv_fs_cbfs.c
	lvgl/src/libs/fsdrv/lv_fs_fatfs.c
	lvgl/src/libs/fsdrv/lv_fs_posix.c
	lvgl/src/libs/fsdrv/lv_fs_stdio.c
	lvgl/src/libs/fsdrv/lv_fs_win32.c
	lvgl/src/libs/gif/gifdec.c
	lvgl/src/libs/gif/lv_gif.c
	lvgl/src/libs/png/lodepng.c
	lvgl/src/libs/png/lv_png.c
	lvgl/src/libs/qrcode/lv_qrcode.c
	lvgl/src/libs/qrcode/qrcodegen.c
	lvgl/src/libs/rlottie/lv_rlottie.c
	lvgl/src/libs/sjpg/lv_sjpg.c
	lvgl/src/libs/sjpg/tjpgd.c
	lvgl/src/libs/tiny_ttf/lv_tiny_ttf.c
	lvgl/src/misc/lv_anim.c
	lvgl/src/misc/lv_anim_timeline.c
	lvgl/src/misc/lv_area.c
	lvgl/src/misc/lv_async.c
	lvgl/src/misc/lv_bidi.c
	lvgl/src/misc/lv_color.c
	lvgl/src/misc/lv_fs.c
	lvgl/src/misc/lv_gc.c
	lvgl/src/misc/lv_ll.c
	lvgl/src/misc/lv_log.c
	lvgl/src/misc/lv_lru.c
	lvgl/src/misc/lv_malloc_builtin.c
	lvgl/src/misc/lv_math.c
	lvgl/src/misc/lv_mem.c
	lvgl/src/misc/lv_memcpy_builtin.c
	lvgl/src/misc/lv_printf.c
	lvgl/src/misc/lv_style.c
	lvgl/src/misc/lv_style_gen.c
	lvgl/src/misc/lv_templ.c
	lvgl/src/misc/lv_timer.c
	lvgl/src/misc/lv_tlsf.c
	lvgl/src/misc/lv_txt.c
	lvgl/src/misc/lv_txt_ap.c
	lvgl/src/misc/lv_utils.c
	lvgl/src/others/file_explorer/lv_file_explorer.c
	lvgl/src/others/fragment/lv_fragment.c
	lvgl/src/others/fragment/lv_fragment_manager.c
	lvgl/src/others/gridnav/lv_gridnav.c
	lvgl/src/others/ime/lv_ime_pinyin.c
	lvgl/src/others/imgfont/lv_imgfont.c
	lvgl/src/others/monkey/lv_monkey.c
	lvgl/src/others/msg/lv_msg.c
	lvgl/src/others/snapshot/lv_snapshot.c
	lvgl/src/themes/basic/lv_theme_basic.c
	lvgl/src/themes/default/lv_theme_default.c
	lvgl/src/themes/mono/lv_theme_mono.c
	lvgl/src/widgets/animimg/lv_animimg.c
	lvgl/src/widgets/arc/lv_arc.c
	lvgl/src/widgets/bar/lv_bar.c
	lvgl/src/widgets/btn/lv_btn.c
	lvgl/src/widgets/btnmatrix/lv_btnmatrix.c
	lvgl/src/widgets/calendar/lv_calendar.c
	lvgl/src/widgets/calendar/lv_calendar_header_arrow.c
	lvgl/src/widgets/calendar/lv_calendar_header_dropdown.c
	lvgl/src/widgets/canvas/lv_canvas.c
	lvgl/src/widgets/chart/lv_chart.c
	lvgl/src/widgets/checkbox/lv_checkbox.c
	lvgl/src/widgets/colorwheel/lv_colorwheel.c
	lvgl/src/widgets/dropdown/lv_dropdown.c
	lvgl/src/widgets/img/lv_img.c
	lvgl/src/widgets/imgbtn/lv_imgbtn.c
	lvgl/src/widgets/keyboard/lv_keyboard.c
	lvgl/src/widgets/label/lv_label.c
	lvgl/src/widgets/led/lv_led.c
	lvgl/src/widgets/line/lv_line.c
	lvgl/src/widgets/list/lv_list.c
	lvgl/src/widgets/menu/lv_menu.c
	lvgl/src/widgets/meter/lv_meter.c
	lvgl/src/widgets/msgbox/lv_msgbox.c
	lvgl/src/widgets/objx_templ/lv_objx_templ.c
	lvgl/src/widgets/roller/lv_roller.c
	lvgl/src/widgets/slider/lv_slider.c
	lvgl/src/widgets/span/lv_span.c
	lvgl/src/widgets/spinbox/lv_spinbox.c
	lvgl/src/widgets/spinner/lv_spinner.c
	lvgl/src/widgets/switch/lv_switch.c
	lvgl/src/widgets/table/lv_table.c
	lvgl/src/widgets/tabview/lv_tabview.c
	lvgl/src/widgets/textarea/lv_textarea.c
	lvgl/src/widgets/tileview/lv_tileview.c
	lvgl/src/widgets/win/lv_win.c)
	
set(HDR_LIST_LVGL
	lvgl/src/core/lv_disp.h
	lvgl/src/core/lv_event.h
	lvgl/src/core/lv_group.h
	lvgl/src/core/lv_indev.h
	lvgl/src/core/lv_indev_scroll.h
	lvgl/src/core/lv_obj.h
	lvgl/src/core/lv_obj_class.h
	lvgl/src/core/lv_obj_draw.h
	lvgl/src/core/lv_obj_pos.h
	lvgl/src/core/lv_obj_scroll.h
	lvgl/src/core/lv_obj_style.h
	lvgl/src/core/lv_obj_style_gen.h
	lvgl/src/core/lv_obj_tree.h
	lvgl/src/core/lv_refr.h
	lvgl/src/core/lv_theme.h
	lvgl/src/draw/arm2d/lv_gpu_arm2d.h
	lvgl/src/draw/gd32_ipa/lv_gpu_gd32_ipa.h
	lvgl/src/draw/nxp/pxp/lv_draw_pxp_blend.h
	lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp.h
	lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp_osa.h
	lvgl/src/draw/nxp/vglite/lv_draw_vglite_arc.h
	lvgl/src/draw/nxp/vglite/lv_draw_vglite_blend.h
	lvgl/src/draw/nxp/vglite/lv_draw_vglite_rect.h
	lvgl/src/draw/nxp/vglite/lv_gpu_nxp_vglite.h
	lvgl/src/draw/nxp/lv_gpu_nxp.h
	lvgl/src/draw/sdl/lv_draw_sdl.h
	lvgl/src/draw/sdl/lv_draw_sdl_composite.h
	lvgl/src/draw/sdl/lv_draw_sdl_img.h
	lvgl/src/draw/sdl/lv_draw_sdl_layer.h
	lvgl/src/draw/sdl/lv_draw_sdl_mask.h
	lvgl/src/draw/sdl/lv_draw_sdl_priv.h
	lvgl/src/draw/sdl/lv_draw_sdl_rect.h
	lvgl/src/draw/sdl/lv_draw_sdl_stack_blur.h
	lvgl/src/draw/sdl/lv_draw_sdl_texture_cache.h
	lvgl/src/draw/sdl/lv_draw_sdl_utils.h
	lvgl/src/draw/stm32_dma2d/lv_gpu_stm32_dma2d.h
	lvgl/src/draw/sw/lv_draw_sw.h
	lvgl/src/draw/sw/lv_draw_sw_blend.h
	lvgl/src/draw/sw/lv_draw_sw_dither.h
	lvgl/src/draw/sw/lv_draw_sw_gradient.h
	lvgl/src/draw/swm341_dma2d/lv_gpu_swm341_dma2d.h
	lvgl/src/draw/lv_draw.h
	lvgl/src/draw/lv_draw_arc.h
	lvgl/src/draw/lv_draw_img.h
	lvgl/src/draw/lv_draw_label.h
	lvgl/src/draw/lv_draw_layer.h
	lvgl/src/draw/lv_draw_line.h
	lvgl/src/draw/lv_draw_mask.h
	lvgl/src/draw/lv_draw_rect.h
	lvgl/src/draw/lv_draw_transform.h
	lvgl/src/draw/lv_draw_triangle.h
	lvgl/src/draw/lv_img_buf.h
	lvgl/src/draw/lv_img_cache.h
	lvgl/src/draw/lv_img_cache_builtin.h
	lvgl/src/draw/lv_img_decoder.h
	lvgl/src/font/lv_font.h
	lvgl/src/font/lv_font_fmt_txt.h
	lvgl/src/font/lv_font_loader.h
	lvgl/src/font/lv_symbol_def.h
	lvgl/src/hal/lv_hal.h
	lvgl/src/hal/lv_hal_disp.h
	lvgl/src/hal/lv_hal_indev.h
	lvgl/src/hal/lv_hal_tick.h
	lvgl/src/layouts/flex/lv_flex.h
	lvgl/src/layouts/grid/lv_grid.h
	lvgl/src/libs/barcode/code128.h
	lvgl/src/libs/barcode/lv_barcode.h
	lvgl/src/libs/bmp/lv_bmp.h
	lvgl/src/libs/ffmpeg/lv_ffmpeg.h
	lvgl/src/libs/freetype/ftmodule.h
	lvgl/src/libs/freetype/ftoption.h
	lvgl/src/libs/freetype/lv_freetype.h
	lvgl/src/libs/fsdrv/lv_fsdrv.h
	lvgl/src/libs/gif/gifdec.h
	lvgl/src/libs/gif/lv_gif.h
	lvgl/src/libs/png/lodepng.h
	lvgl/src/libs/png/lv_png.h
	lvgl/src/libs/qrcode/lv_qrcode.h
	lvgl/src/libs/qrcode/qrcodegen.h
	lvgl/src/libs/rlottie/lv_rlottie.h
	lvgl/src/libs/sjpg/lv_sjpg.h
	lvgl/src/libs/sjpg/tjpgd.h
	lvgl/src/libs/sjpg/tjpgdcnf.h
	lvgl/src/libs/tiny_ttf/lv_tiny_ttf.h
	lvgl/src/libs/tiny_ttf/stb_rect_pack.h
	lvgl/src/libs/tiny_ttf/stb_truetype_htcw.h
	lvgl/src/misc/lv_anim.h
	lvgl/src/misc/lv_anim_timeline.h
	lvgl/src/misc/lv_area.h
	lvgl/src/misc/lv_assert.h
	lvgl/src/misc/lv_async.h
	lvgl/src/misc/lv_bidi.h
	lvgl/src/misc/lv_color.h
	lvgl/src/misc/lv_fs.h
	lvgl/src/misc/lv_gc.h
	lvgl/src/misc/lv_ll.h
	lvgl/src/misc/lv_log.h
	lvgl/src/misc/lv_lru.h
	lvgl/src/misc/lv_malloc_builtin.h
	lvgl/src/misc/lv_math.h
	lvgl/src/misc/lv_mem.h
	lvgl/src/misc/lv_memcpy_builtin.h
	lvgl/src/misc/lv_printf.h
	lvgl/src/misc/lv_style.h
	lvgl/src/misc/lv_style_gen.h
	lvgl/src/misc/lv_templ.h
	lvgl/src/misc/lv_timer.h
	lvgl/src/misc/lv_tlsf.h
	lvgl/src/misc/lv_txt.h
	lvgl/src/misc/lv_txt_ap.h
	lvgl/src/misc/lv_types.h
	lvgl/src/misc/lv_utils.h
	lvgl/src/others/file_explorer/lv_file_explorer.h
	lvgl/src/others/fragment/lv_fragment.h
	lvgl/src/others/gridnav/lv_gridnav.h
	lvgl/src/others/ime/lv_ime_pinyin.h
	lvgl/src/others/imgfont/lv_imgfont.h
	lvgl/src/others/monkey/lv_monkey.h
	lvgl/src/others/msg/lv_msg.h
	lvgl/src/others/snapshot/lv_snapshot.h
	lvgl/src/themes/basic/lv_theme_basic.h
	lvgl/src/themes/default/lv_theme_default.h
	lvgl/src/themes/mono/lv_theme_mono.h
	lvgl/src/themes/lv_themes.h
	lvgl/src/widgets/animimg/lv_animimg.h
	lvgl/src/widgets/arc/lv_arc.h
	lvgl/src/widgets/bar/lv_bar.h
	lvgl/src/widgets/btn/lv_btn.h
	lvgl/src/widgets/btnmatrix/lv_btnmatrix.h
	lvgl/src/widgets/calendar/lv_calendar.h
	lvgl/src/widgets/calendar/lv_calendar_header_arrow.h
	lvgl/src/widgets/calendar/lv_calendar_header_dropdown.h
	lvgl/src/widgets/canvas/lv_canvas.h
	lvgl/src/widgets/chart/lv_chart.h
	lvgl/src/widgets/checkbox/lv_checkbox.h
	lvgl/src/widgets/colorwheel/lv_colorwheel.h
	lvgl/src/widgets/dropdown/lv_dropdown.h
	lvgl/src/widgets/img/lv_img.h
	lvgl/src/widgets/imgbtn/lv_imgbtn.h
	lvgl/src/widgets/keyboard/lv_keyboard.h
	lvgl/src/widgets/label/lv_label.h
	lvgl/src/widgets/led/lv_led.h
	lvgl/src/widgets/line/lv_line.h
	lvgl/src/widgets/list/lv_list.h
	lvgl/src/widgets/menu/lv_menu.h
	lvgl/src/widgets/meter/lv_meter.h
	lvgl/src/widgets/msgbox/lv_msgbox.h
	lvgl/src/widgets/objx_templ/lv_objx_templ.h
	lvgl/src/widgets/roller/lv_roller.h
	lvgl/src/widgets/slider/lv_slider.h
	lvgl/src/widgets/span/lv_span.h
	lvgl/src/widgets/spinbox/lv_spinbox.h
	lvgl/src/widgets/spinner/lv_spinner.h
	lvgl/src/widgets/switch/lv_switch.h
	lvgl/src/widgets/table/lv_table.h
	lvgl/src/widgets/tabview/lv_tabview.h
	lvgl/src/widgets/textarea/lv_textarea.h
	lvgl/src/widgets/tileview/lv_tileview.h
	lvgl/src/widgets/win/lv_win.h
	lvgl/src/lv_api_map.h
	lvgl/src/lv_conf_internal.h
	lvgl/src/lv_conf_kconfig.h
	lvgl/src/lvgl.h)
	
set(SRC_LIST_LVGL_DRIVERS
	lv_drivers/display/drm.c
	lv_drivers/display/fbdev.c
	lv_drivers/display/GC9A01.c
	lv_drivers/display/ILI9341.c
	lv_drivers/display/R61581.c
	lv_drivers/display/SHARP_MIP.c
	lv_drivers/display/SSD1963.c
	lv_drivers/display/ST7565.c
	lv_drivers/display/UC1610.c
	lv_drivers/gtkdrv/gtkdrv.c
	lv_drivers/indev/AD_touch.c
	lv_drivers/indev/evdev.c
	lv_drivers/indev/FT5406EE8.c
	lv_drivers/indev/libinput.c
	lv_drivers/indev/xkb.c
	lv_drivers/indev/XPT2046.c
	lv_drivers/sdl/sdl.c
	lv_drivers/sdl/sdl_common.c
	lv_drivers/sdl/sdl_gpu.c
	lv_drivers/wayland/wayland.c
	lv_drivers/win32drv/win32drv.c
	lv_drivers/win_drv.c)
	
set(HDR_LIST_LVGL_DRIVERS
	lv_drivers/display/drm.h
	lv_drivers/display/fbdev.h
	lv_drivers/display/GC9A01.h
	lv_drivers/display/ILI9341.h
	lv_drivers/display/monitor.h
	lv_drivers/display/R61581.h
	lv_drivers/display/SHARP_MIP.h
	lv_drivers/display/SSD1963.h
	lv_drivers/display/ST7565.h
	lv_drivers/display/UC1610.h
	lv_drivers/gtkdrv/gtkdrv.h
	lv_drivers/indev/AD_touch.h
	lv_drivers/indev/evdev.h
	lv_drivers/indev/FT5406EE8.h
	lv_drivers/indev/keyboard.h
	lv_drivers/indev/libinput_drv.h
	lv_drivers/indev/mouse.h
	lv_drivers/indev/mousewheel.h
	lv_drivers/indev/xkb.h
	lv_drivers/indev/XPT2046.h
	lv_drivers/sdl/sdl.h
	lv_drivers/sdl/sdl_common.h
	lv_drivers/sdl/sdl_common_internal.h
	lv_drivers/sdl/sdl_gpu.h
	lv_drivers/wayland/wayland.h
	lv_drivers/win32drv/win32drv.h
	lv_drivers/win_drv.h)
	
	
set(LV_CONF_PATH
    ${CMAKE_CURRENT_SOURCE_DIR}/lv_conf.h
    CACHE STRING "" FORCE)
	
set(LV_DRV_CONF_PATH
	${CMAKE_CURRENT_SOURCE_DIR}/lv_drv_conf.h
    CACHE STRING "" FORCE)
	
add_executable(${PROJECT_NAME} 	main.cpp 
								${SRC_LIST_LVGL}
								${SRC_LIST_LVGL_DRIVERS}
								${HDR_LIST_LVGL}
								${HDR_LIST_LVGL_DRIVERS})
	

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(${PROJECT_NAME} PRIVATE UNICODE)

source_group("lvgl/sources" FILES ${SRC_LIST_LVGL})
source_group("lvgl/headers" FILES ${HDR_LIST_LVGL})
source_group("lvgl_drivers/sources" FILES ${SRC_LIST_LVGL_DRIVERS})
source_group("lvgl_drivers/headers" FILES ${HDR_LIST_LVGL_DRIVERS})
